# python_Module

./: pyproject.toml
00/: pyproject.toml
00/src/ex0/: ft_hello_garden.py
00/src/ex1/: ft_garden_name.py
00/src/ex2/: ft_plot_area.py
00/src/ex3/: ft_harvest_total.py
00/src/ex4/: ft_plant_age.py
00/src/ex5/: ft_water_reminder.py
00/src/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
00/src/ex7/: ft_seed_inventory.py
01/src/ex0/: ft_garden_intro.py
01/src/ex1/: ft_garden_data.py
